--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Top Down Test 2.sln"
+    "dotnet.defaultSolution": "Unity-Top-Down-RPG.sln"
 }
